@@ -9,14 +9,15 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 import com.woowacourse.levellog.common.exception.InvalidFieldException;
-import com.woowacourse.levellog.common.exception.UnauthorizedException;
-import com.woowacourse.levellog.team.dto.ParticipantIdsDto;
+import com.woowacourse.levellog.common.support.DebugMessage;
 import com.woowacourse.levellog.team.dto.TeamWriteDto;
-import com.woowacourse.levellog.team.exception.DuplicateParticipantsException;
 import com.woowacourse.levellog.team.exception.HostUnauthorizedException;
-import com.woowacourse.levellog.team.exception.InterviewTimeException;
 import com.woowacourse.levellog.team.exception.ParticipantNotFoundException;
+import com.woowacourse.levellog.team.exception.ParticipantNotSameTeamException;
+import com.woowacourse.levellog.team.exception.TeamAlreadyClosedException;
 import com.woowacourse.levellog.team.exception.TeamNotFoundException;
+import com.woowacourse.levellog.team.exception.TeamNotInProgressException;
+import com.woowacourse.levellog.team.exception.TeamNotReadyException;
 import java.time.LocalDateTime;
 import java.util.Collections;
 import java.util.List;
@@ -39,7 +40,7 @@ class TeamControllerTest extends ControllerTest {
         final String invalidStatus = "invalid";
         final String message = "입력 받은 status가 올바르지 않습니다.";
 
-        willThrow(new InvalidFieldException(message))
+        willThrow(new InvalidFieldException(message, DebugMessage.init()))
                 .given(teamService)
                 .findAll(Optional.of(invalidStatus), 1L);
 
@@ -68,9 +69,8 @@ class TeamControllerTest extends ControllerTest {
         @DisplayName("팀 명으로 null이 들어오면 예외를 던진다.")
         void save_titleNull_exception(final String title) throws Exception {
             // given
-            final ParticipantIdsDto participantIds = new ParticipantIdsDto(List.of(2L, 3L));
             final TeamWriteDto request = new TeamWriteDto(title, "트랙룸", 1, LocalDateTime.now().plusDays(3),
-                    participantIds);
+                    List.of(2L, 3L), Collections.emptyList());
 
             // when
             final ResultActions perform = requestCreateTeam(request);
@@ -89,13 +89,12 @@ class TeamControllerTest extends ControllerTest {
         @DisplayName("팀 명으로 255자를 초과할 경우 예외를 던진다.")
         void save_titleInvalidLength_exception() throws Exception {
             // given
-            final ParticipantIdsDto participantIds = new ParticipantIdsDto(List.of(2L, 3L));
             final String title = "네오".repeat(128);
             final TeamWriteDto request = new TeamWriteDto(title, "트랙룸", 1, LocalDateTime.now().plusDays(3),
-                    participantIds);
+                    List.of(2L, 3L), Collections.emptyList());
 
-            final String message = "잘못된 팀 이름을 입력했습니다. 입력한 팀 이름 : [" + title + "]";
-            willThrow(new InvalidFieldException(message))
+            final String message = "팀 이름은 255 이하여야 합니다.";
+            willThrow(new InvalidFieldException(message, DebugMessage.init()))
                     .given(teamService)
                     .save(request, 1L);
 
@@ -118,9 +117,8 @@ class TeamControllerTest extends ControllerTest {
         @DisplayName("장소로 null이 들어오면 예외를 던진다.")
         void save_placeNull_exception(final String place) throws Exception {
             // given
-            final ParticipantIdsDto participantIds = new ParticipantIdsDto(List.of(2L, 3L));
             final TeamWriteDto request = new TeamWriteDto("네오 인터뷰", place, 1, LocalDateTime.now().plusDays(3),
-                    participantIds);
+                    List.of(2L, 3L), Collections.emptyList());
 
             // when
             final ResultActions perform = requestCreateTeam(request);
@@ -139,13 +137,12 @@ class TeamControllerTest extends ControllerTest {
         @DisplayName("장소로 255자를 초과할 경우 예외를 던진다.")
         void save_placeInvalidLength_exception() throws Exception {
             // given
-            final ParticipantIdsDto participantIds = new ParticipantIdsDto(List.of(2L, 3L));
             final String place = "선릉".repeat(128);
             final TeamWriteDto request = new TeamWriteDto("네오 인터뷰", place, 1, LocalDateTime.now().plusDays(3),
-                    participantIds);
+                    List.of(2L, 3L), Collections.emptyList());
 
-            final String message = "잘못된 장소를 입력했습니다. 입력한 장소 : [" + place + "]";
-            willThrow(new InvalidFieldException(message))
+            final String message = "장소 이름은 255 이하여야 합니다.";
+            willThrow(new InvalidFieldException(message, DebugMessage.init()))
                     .given(teamService)
                     .save(request, 1L);
 
@@ -166,8 +163,8 @@ class TeamControllerTest extends ControllerTest {
         @DisplayName("인터뷰 시작 시간으로 null이 들어오면 예외를 던진다.")
         void save_startAtNull_exception() throws Exception {
             // given
-            final ParticipantIdsDto participantIds = new ParticipantIdsDto(List.of(1L, 5L));
-            final TeamWriteDto request = new TeamWriteDto("잠실 준조", "트랙룸", 1, null, participantIds);
+            final TeamWriteDto request = new TeamWriteDto("잠실 준조", "트랙룸", 1, null, List.of(1L, 5L),
+                    Collections.emptyList());
 
             // when
             final ResultActions perform = requestCreateTeam(request);
@@ -186,12 +183,12 @@ class TeamControllerTest extends ControllerTest {
         @DisplayName("인터뷰 시작 시간이 현재 시간 기준으로 과거면 예외를 던진다.")
         void save_startAtPast_exception() throws Exception {
             // given
-            final ParticipantIdsDto participantIds = new ParticipantIdsDto(List.of(2L, 3L));
             final LocalDateTime startAt = LocalDateTime.now().minusDays(3);
-            final TeamWriteDto request = new TeamWriteDto("네오 인터뷰", "선릉 트랙룸", 1, startAt, participantIds);
+            final TeamWriteDto request = new TeamWriteDto("네오 인터뷰", "선릉 트랙룸", 1, startAt, List.of(2L, 3L),
+                    Collections.emptyList());
 
-            final String message = "잘못된 시작 시간을 입력했습니다. 입력한 시작 시간 : [" + startAt + "]";
-            willThrow(new InvalidFieldException(message))
+            final String message = "인터뷰 시작 시간은 현재 시간 이후여야 합니다.";
+            willThrow(new InvalidFieldException(message, DebugMessage.init()))
                     .given(teamService)
                     .save(request, 1L);
 
@@ -213,7 +210,7 @@ class TeamControllerTest extends ControllerTest {
         void save_participantsEmpty_exception() throws Exception {
             // given
             final TeamWriteDto request = new TeamWriteDto("잠실 준조", "트랙룸", 1, LocalDateTime.now().plusDays(3),
-                    new ParticipantIdsDto(Collections.emptyList()));
+                    Collections.emptyList(), List.of(1L, 2L));
 
             // when
             final ResultActions perform = requestCreateTeam(request);
@@ -231,7 +228,8 @@ class TeamControllerTest extends ControllerTest {
         @DisplayName("팀 구성원 목록으로 null이 들어오면 예외를 던진다.")
         void save_participantsNull_exception() throws Exception {
             // given
-            final TeamWriteDto request = new TeamWriteDto("잠실 준조", "트랙룸", 1, LocalDateTime.now().plusDays(3), null);
+            final TeamWriteDto request = new TeamWriteDto("잠실 준조", "트랙룸", 1, LocalDateTime.now().plusDays(3), null,
+                    List.of(1L, 2L));
 
             // when
             final ResultActions perform = requestCreateTeam(request);
@@ -239,7 +237,7 @@ class TeamControllerTest extends ControllerTest {
             // then
             perform.andExpectAll(
                     status().isBadRequest(),
-                    jsonPath("message").value(containsString("participants must not be null"))
+                    jsonPath("message").value(containsString("participantIds must not be empty"))
             );
 
             // docs
@@ -250,9 +248,8 @@ class TeamControllerTest extends ControllerTest {
         @DisplayName("인터뷰어가 1명 미만이면 예외를 던진다.")
         void save_notPositiveInterviewerNumber_exception() throws Exception {
             // given
-            final ParticipantIdsDto participants = new ParticipantIdsDto(List.of(2L, 3L));
             final TeamWriteDto request = new TeamWriteDto("잠실 준조", "트랙룸", 0, LocalDateTime.now().plusDays(3),
-                    participants);
+                    List.of(2L, 3L), Collections.emptyList());
 
             // when
             final ResultActions perform = requestCreateTeam(request);
@@ -271,12 +268,11 @@ class TeamControllerTest extends ControllerTest {
         @DisplayName("인터뷰어 수가 참가자 수보다 많거나 같으면 예외를 던진다.")
         void save_interviewerMoreThanParticipant_exception() throws Exception {
             // given
-            final ParticipantIdsDto participants = new ParticipantIdsDto(List.of(2L, 3L, 4L));
             final TeamWriteDto request = new TeamWriteDto("잠실 준조", "트랙룸", 4, LocalDateTime.now().plusDays(3),
-                    participants);
+                    List.of(2L, 3L, 4L), Collections.emptyList());
 
             final String message = "참가자 수는 인터뷰어 수 보다 많아야 합니다.";
-            willThrow(new InvalidFieldException(message))
+            willThrow(new InvalidFieldException(message, DebugMessage.init()))
                     .given(teamService)
                     .save(request, 1L);
 
@@ -294,15 +290,14 @@ class TeamControllerTest extends ControllerTest {
         }
 
         @Test
-        @DisplayName("팀 구성원 목록으로 중복된 Id가 들어오면 예외를 던진다.")
+        @DisplayName("팀 참가자 목록으로 중복된 Id가 들어오면 예외를 던진다.")
         void save_duplicateParticipant_exception() throws Exception {
             // given
-            final ParticipantIdsDto participants = new ParticipantIdsDto(List.of(2L, 2L, 3L));
             final TeamWriteDto request = new TeamWriteDto("잠실 준조", "트랙룸", 1, LocalDateTime.now().plusDays(3),
-                    participants);
+                    List.of(2L, 2L, 3L), Collections.emptyList());
 
             final String message = "중복되는 참가자가 존재합니다.";
-            willThrow(new DuplicateParticipantsException(message))
+            willThrow(new InvalidFieldException(message, DebugMessage.init()))
                     .given(teamService)
                     .save(request, 1L);
 
@@ -320,15 +315,14 @@ class TeamControllerTest extends ControllerTest {
         }
 
         @Test
-        @DisplayName("팀 구성원 목록으로 호스트 Id가 들어오면 예외를 던진다.")
-        void save_participantsWithHostId_exception() throws Exception {
+        @DisplayName("팀 참관자 목록으로 중복된 Id가 들어오면 예외를 던진다.")
+        void save_duplicateWatcher_exception() throws Exception {
             // given
-            final ParticipantIdsDto participants = new ParticipantIdsDto(List.of(1L, 2L));
             final TeamWriteDto request = new TeamWriteDto("잠실 준조", "트랙룸", 1, LocalDateTime.now().plusDays(3),
-                    participants);
+                    List.of(1L, 2L, 3L), List.of(4L, 4L, 5L));
 
-            final String message = "중복되는 참가자가 존재합니다.";
-            willThrow(new DuplicateParticipantsException(message))
+            final String message = "중복되는 참관자가 존재합니다.";
+            willThrow(new InvalidFieldException(message, DebugMessage.init()))
                     .given(teamService)
                     .save(request, 1L);
 
@@ -342,7 +336,56 @@ class TeamControllerTest extends ControllerTest {
             );
 
             // docs
-            perform.andDo(document(BASE_SNIPPET_PATH + "participants-have-host"));
+            perform.andDo(document(BASE_SNIPPET_PATH + "watchers-duplicate"));
+        }
+
+        @Test
+        @DisplayName("팀 참가자와 참관자 목록에 겹치는 Id가 들어오면 예외를 던진다.")
+        void save_notIndependent_exception() throws Exception {
+            // given
+            final TeamWriteDto request = new TeamWriteDto("잠실 준조", "트랙룸", 1, LocalDateTime.now().plusDays(3),
+                    List.of(1L, 2L, 3L, 4L), List.of(4L, 5L));
+
+            final String message = "참가자와 참관자에 모두 포함된 멤버가 존재합니다.";
+            willThrow(new InvalidFieldException(message, DebugMessage.init()))
+                    .given(teamService)
+                    .save(request, 1L);
+
+            // when
+            final ResultActions perform = requestCreateTeam(request);
+
+            // then
+            perform.andExpectAll(
+                    status().isBadRequest(),
+                    jsonPath("message").value(message)
+            );
+
+            // docs
+            perform.andDo(document(BASE_SNIPPET_PATH + "not-independent"));
+        }
+
+        @Test
+        @DisplayName("호스트가 참가자 또는 참관자에 포함되지 않으면 예외가 던진다.")
+        void save_hostExistence_exception() throws Exception {
+            // given
+            final TeamWriteDto request = new TeamWriteDto("잠실 준조", "트랙룸", 1, LocalDateTime.now().plusDays(3),
+                    List.of(2L, 3L, 4L), List.of(5L));
+            final String message = "호스트가 참가자 또는 참관자 목록에 존재하지 않습니다.";
+            willThrow(new InvalidFieldException(message, DebugMessage.init()))
+                    .given(teamService)
+                    .save(request, 1L);
+
+            // when
+            final ResultActions perform = requestCreateTeam(request);
+
+            // then
+            perform.andExpectAll(
+                    status().isBadRequest(),
+                    jsonPath("message").value(message)
+            );
+
+            // docs
+            perform.andDo(document(BASE_SNIPPET_PATH + "host-existence"));
         }
 
         private ResultActions requestCreateTeam(final TeamWriteDto request) throws Exception {
@@ -363,9 +406,8 @@ class TeamControllerTest extends ControllerTest {
         void update_titleNull_exception(final String title) throws Exception {
             // given
             final long id = 1;
-            final ParticipantIdsDto participantIds = new ParticipantIdsDto(List.of(2L, 3L));
             final TeamWriteDto request = new TeamWriteDto(title, "트랙룸", 1, LocalDateTime.now().plusDays(3),
-                    participantIds);
+                    List.of(2L, 3L), Collections.emptyList());
 
             // when
             final ResultActions perform = requestUpdateTeam(id, request);
@@ -386,12 +428,11 @@ class TeamControllerTest extends ControllerTest {
             // given
             final long id = 1;
             final String title = "네오".repeat(128);
-            final ParticipantIdsDto participantIds = new ParticipantIdsDto(List.of(2L, 3L));
             final TeamWriteDto request = new TeamWriteDto(title, "트랙룸", 1, LocalDateTime.now().plusDays(3),
-                    participantIds);
+                    List.of(2L, 3L), Collections.emptyList());
 
-            final String message = "잘못된 팀 이름을 입력했습니다. 입력한 팀 이름 : [" + title + "]";
-            willThrow(new InvalidFieldException(message))
+            final String message = "팀 이름은 255 이하여야 합니다.";
+            willThrow(new InvalidFieldException(message, DebugMessage.init()))
                     .given(teamService)
                     .update(request, id, 1L);
 
@@ -415,9 +456,8 @@ class TeamControllerTest extends ControllerTest {
         void update_placeNull_exception(final String place) throws Exception {
             // given
             final long id = 1;
-            final ParticipantIdsDto participantIds = new ParticipantIdsDto(List.of(2L, 3L));
             final TeamWriteDto request = new TeamWriteDto("잠실 제이슨조", place, 1, LocalDateTime.now().plusDays(3),
-                    participantIds);
+                    List.of(2L, 3L), Collections.emptyList());
 
             // when
             final ResultActions perform = requestUpdateTeam(id, request);
@@ -438,12 +478,11 @@ class TeamControllerTest extends ControllerTest {
             // given
             final long id = 1;
             final String place = "거실".repeat(128);
-            final ParticipantIdsDto participantIds = new ParticipantIdsDto(List.of(2L, 3L));
             final TeamWriteDto request = new TeamWriteDto("잠실 제이슨조", place, 1, LocalDateTime.now().plusDays(3),
-                    participantIds);
+                    List.of(2L, 3L), Collections.emptyList());
 
-            final String message = "잘못된 장소를 입력했습니다. 입력한 장소 : [" + place + "]";
-            willThrow(new InvalidFieldException(message))
+            final String message = "장소 이름은 255 이하여야 합니다.";
+            willThrow(new InvalidFieldException(message, DebugMessage.init()))
                     .given(teamService)
                     .update(request, id, 1L);
 
@@ -465,8 +504,8 @@ class TeamControllerTest extends ControllerTest {
         void update_startAtNull_exception() throws Exception {
             // given
             final long id = 1;
-            final ParticipantIdsDto participantIds = new ParticipantIdsDto(List.of(2L, 3L));
-            final TeamWriteDto request = new TeamWriteDto("잠실 제이슨조", "트랙룸", 1, null, participantIds);
+            final TeamWriteDto request = new TeamWriteDto("잠실 제이슨조", "트랙룸", 1, null, List.of(2L, 3L),
+                    Collections.emptyList());
 
             // when
             final ResultActions perform = requestUpdateTeam(id, request);
@@ -487,10 +526,10 @@ class TeamControllerTest extends ControllerTest {
             // given
             final long id = 1;
             final LocalDateTime startAt = LocalDateTime.now().minusDays(3);
-            final ParticipantIdsDto participantIds = new ParticipantIdsDto(List.of(1L, 5L));
-            final TeamWriteDto request = new TeamWriteDto("잠실 제이슨조", "트랙룸", 1, startAt, participantIds);
+            final TeamWriteDto request = new TeamWriteDto("잠실 제이슨조", "트랙룸", 1, startAt, List.of(1L, 5L),
+                    Collections.emptyList());
 
-            willThrow(new InvalidFieldException("잘못된 시작 시간을 입력했습니다. 입력한 시작 시간 : [" + startAt + "]"))
+            willThrow(new InvalidFieldException("인터뷰 시작 시간은 현재 시간 이후여야 합니다.", DebugMessage.init()))
                     .given(teamService)
                     .update(request, id, 1L);
 
@@ -500,7 +539,7 @@ class TeamControllerTest extends ControllerTest {
             // then
             perform.andExpectAll(
                     status().isBadRequest(),
-                    jsonPath("message").value(containsString("잘못된 시작 시간을 입력했습니다."))
+                    jsonPath("message").value(containsString("인터뷰 시작 시간은 현재 시간 이후여야 합니다."))
             );
 
             // docs
@@ -511,12 +550,11 @@ class TeamControllerTest extends ControllerTest {
         @DisplayName("없는 팀을 수정하려고 하면 예외를 던진다.")
         void update_teamNotFound_exception() throws Exception {
             // given
-            final ParticipantIdsDto participantIds = new ParticipantIdsDto(List.of(2L, 3L));
             final TeamWriteDto request = new TeamWriteDto("잠실 제이슨조", "트랙룸", 1, LocalDateTime.now().plusDays(10),
-                    participantIds);
+                    List.of(2L, 3L), Collections.emptyList());
 
             final String message = "팀이 존재하지 않습니다.";
-            willThrow(new TeamNotFoundException("팀이 존재하지 않습니다. 입력한 팀 id : [10000000]", message))
+            willThrow(new TeamNotFoundException(DebugMessage.init()))
                     .given(teamService)
                     .update(request, 10000000L, 1L);
 
@@ -538,7 +576,7 @@ class TeamControllerTest extends ControllerTest {
         void update_participantsEmpty_exception() throws Exception {
             // given
             final TeamWriteDto request = new TeamWriteDto("잠실 제이슨조", "트랙룸", 1, LocalDateTime.now().plusDays(3),
-                    new ParticipantIdsDto(Collections.emptyList()));
+                    Collections.emptyList(), List.of(1L, 2L));
 
             // when
             final ResultActions perform = requestUpdateTeam(1L, request);
@@ -554,7 +592,8 @@ class TeamControllerTest extends ControllerTest {
         @DisplayName("팀 구성원 목록으로 null이 들어오면 예외를 던진다.")
         void update_participantsNull_exception() throws Exception {
             // given
-            final TeamWriteDto request = new TeamWriteDto("잠실 준조", "트랙룸", 1, LocalDateTime.now().plusDays(3), null);
+            final TeamWriteDto request = new TeamWriteDto("잠실 준조", "트랙룸", 1, LocalDateTime.now().plusDays(3), null,
+                    List.of(1L, 2L));
 
             // when
             final ResultActions perform = requestUpdateTeam(1L, request);
@@ -562,7 +601,7 @@ class TeamControllerTest extends ControllerTest {
             // then
             perform.andExpectAll(
                     status().isBadRequest(),
-                    jsonPath("message").value("participants must not be null")
+                    jsonPath("message").value("participantIds must not be empty")
             );
 
             // docs
@@ -573,9 +612,8 @@ class TeamControllerTest extends ControllerTest {
         @DisplayName("인터뷰어가 1명 미만이면 예외를 던진다.")
         void update_notPositiveInterviewerNumber_exception() throws Exception {
             // given
-            final ParticipantIdsDto participants = new ParticipantIdsDto(List.of(2L, 3L, 4L));
             final TeamWriteDto request = new TeamWriteDto("잠실 준조", "트랙룸", 0, LocalDateTime.now().plusDays(3),
-                    participants);
+                    List.of(2L, 3L, 4L), Collections.emptyList());
 
             // when
             final ResultActions perform = requestUpdateTeam(1L, request);
@@ -594,12 +632,11 @@ class TeamControllerTest extends ControllerTest {
         @DisplayName("인터뷰어 수가 참가자 수보다 많거나 같으면 예외를 던진다.")
         void update_interviewerMoreThanParticipant_exception() throws Exception {
             // given
-            final ParticipantIdsDto participants = new ParticipantIdsDto(List.of(2L, 3L));
             final TeamWriteDto request = new TeamWriteDto("잠실 준조", "트랙룸", 1, LocalDateTime.now().plusDays(3),
-                    participants);
+                    List.of(2L, 3L), Collections.emptyList());
 
             final String message = "참가자 수는 인터뷰어 수 보다 많아야 합니다.";
-            willThrow(new InvalidFieldException(message))
+            willThrow(new InvalidFieldException(message, DebugMessage.init()))
                     .given(teamService)
                     .update(request, 1L, 1L);
 
@@ -620,11 +657,10 @@ class TeamControllerTest extends ControllerTest {
         @DisplayName("팀 구성원 목록으로 중복된 Id가 들어오면 예외를 던진다.")
         void update_duplicateParticipant_exception() throws Exception {
             // given
-            final ParticipantIdsDto participants = new ParticipantIdsDto(List.of(2L, 2L, 3L));
             final TeamWriteDto request = new TeamWriteDto("잠실 준조", "트랙룸", 1, LocalDateTime.now().plusDays(3),
-                    participants);
+                    List.of(2L, 2L, 3L), Collections.emptyList());
             final String message = "중복되는 참가자가 존재합니다.";
-            willThrow(new DuplicateParticipantsException(message))
+            willThrow(new InvalidFieldException(message, DebugMessage.init()))
                     .given(teamService)
                     .update(request, 1L, 1L);
 
@@ -642,14 +678,13 @@ class TeamControllerTest extends ControllerTest {
         }
 
         @Test
-        @DisplayName("팀 구성원 목록으로 호스트 Id가 들어오면 예외를 던진다.")
-        void update_participantsWithHostId_exception() throws Exception {
+        @DisplayName("팀 참관자 목록으로 중복된 Id가 들어오면 예외를 던진다.")
+        void update_duplicateWatcher_exception() throws Exception {
             // given
             final TeamWriteDto request = new TeamWriteDto("잠실 준조", "트랙룸", 1, LocalDateTime.now().plusDays(3),
-                    new ParticipantIdsDto(List.of(1L, 2L, 1L)));
-
-            final String message = "중복되는 참가자가 존재합니다.";
-            willThrow(new DuplicateParticipantsException(message))
+                    List.of(1L, 2L, 3L), List.of(4L, 4L, 5L));
+            final String message = "중복된 참관자가 존재합니다.";
+            willThrow(new InvalidFieldException(message, DebugMessage.init()))
                     .given(teamService)
                     .update(request, 1L, 1L);
 
@@ -663,19 +698,66 @@ class TeamControllerTest extends ControllerTest {
             );
 
             // docs
-            perform.andDo(document(BASE_SNIPPET_PATH + "participants-have-host"));
+            perform.andDo(document(BASE_SNIPPET_PATH + "watchers-duplicate"));
+        }
+
+        @Test
+        @DisplayName("팀 참가자와 참관자 목록에 겹치는 Id가 들어오면 예외를 던진다.")
+        void update_notIndependent_exception() throws Exception {
+            // given
+            final TeamWriteDto request = new TeamWriteDto("잠실 준조", "트랙룸", 1, LocalDateTime.now().plusDays(3),
+                    List.of(1L, 2L, 3L, 4L), List.of(4L, 5L));
+            final String message = "참가자와 참관자에 모두 포함된 멤버가 존재합니다.";
+            willThrow(new InvalidFieldException(message, DebugMessage.init()))
+                    .given(teamService)
+                    .update(request, 1L, 1L);
+
+            // when
+            final ResultActions perform = requestUpdateTeam(1L, request);
+
+            // then
+            perform.andExpectAll(
+                    status().isBadRequest(),
+                    jsonPath("message").value(message)
+            );
+
+            // docs
+            perform.andDo(document(BASE_SNIPPET_PATH + "not-independent"));
+        }
+
+        @Test
+        @DisplayName("호스트가 참가자 또는 참관자에 포함되지 않으면 예외가 던진다.")
+        void update_hostExistence_exception() throws Exception {
+            // given
+            final TeamWriteDto request = new TeamWriteDto("잠실 준조", "트랙룸", 1, LocalDateTime.now().plusDays(3),
+                    List.of(2L, 3L, 4L), List.of(5L));
+            final String message = "호스트가 참가자 또는 참관자 목록에 존재하지 않습니다.";
+            willThrow(new InvalidFieldException(message, DebugMessage.init()))
+                    .given(teamService)
+                    .update(request, 1L, 1L);
+
+            // when
+            final ResultActions perform = requestUpdateTeam(1L, request);
+
+            // then
+            perform.andExpectAll(
+                    status().isBadRequest(),
+                    jsonPath("message").value(message)
+            );
+
+            // docs
+            perform.andDo(document(BASE_SNIPPET_PATH + "host-existence"));
         }
 
         @Test
         @DisplayName("인터뷰 시작 이후에 팀을 수정하려고 하면 예외를 던진다.")
         void update_updateAfterStartAt_exception() throws Exception {
             // given
-            final ParticipantIdsDto participants = new ParticipantIdsDto(List.of(2L, 3L));
             final TeamWriteDto request = new TeamWriteDto("잠실 준조", "트랙룸", 1, LocalDateTime.now().plusDays(3),
-                    participants);
+                    List.of(2L, 3L), Collections.emptyList());
 
-            final String message = "인터뷰가 시작된 이후에는 수정할 수 없습니다.";
-            willThrow(new InterviewTimeException(message))
+            final String message = "인터뷰 준비 상태가 아닙니다.";
+            willThrow(new TeamNotReadyException(DebugMessage.init()))
                     .given(teamService)
                     .update(request, 1L, 1L);
 
@@ -708,7 +790,7 @@ class TeamControllerTest extends ControllerTest {
         void findByTeamIdAndMemberId_teamNotFound_exception() throws Exception {
             // given
             final String message = "팀이 존재하지 않습니다.";
-            willThrow(new TeamNotFoundException("팀이 존재하지 않습니다. 입력한 팀 id : [10000000]", message))
+            willThrow(new TeamNotFoundException(DebugMessage.init()))
                     .given(teamService)
                     .findByTeamIdAndMemberId(10000000L, 1L);
 
@@ -742,7 +824,7 @@ class TeamControllerTest extends ControllerTest {
             // given
             final String message = "팀이 존재하지 않습니다.";
             final long teamId = 10000000L;
-            willThrow(new TeamNotFoundException(message + " 입력한 팀 id : [10000000]", message))
+            willThrow(new TeamNotFoundException(DebugMessage.init()))
                     .given(teamService)
                     .findStatus(teamId);
 
@@ -777,9 +859,9 @@ class TeamControllerTest extends ControllerTest {
             final Long teamId = 2L;
             final Long memberId = 5L;
 
-            final String message = "권한이 없습니다.";
+            final String message = "같은 팀에 속해있지 않습니다.";
             given(teamService.findMyRole(teamId, memberId, 1L))
-                    .willThrow(new UnauthorizedException(message));
+                    .willThrow(new ParticipantNotSameTeamException(DebugMessage.init()));
 
             // when
             final ResultActions perform = requestFindMyRole(teamId, memberId);
@@ -801,9 +883,9 @@ class TeamControllerTest extends ControllerTest {
             final Long teamId = 2L;
             final Long memberId = 5L;
 
-            final String message = "참가자를 찾을 수 없습니다.";
+            final String message = "참가자가 존재하지 않습니다.";
             given(teamService.findMyRole(teamId, memberId, 1L))
-                    .willThrow(new ParticipantNotFoundException(message));
+                    .willThrow(new ParticipantNotFoundException(DebugMessage.init()));
 
             // when
             final ResultActions perform = requestFindMyRole(teamId, memberId);
@@ -836,7 +918,7 @@ class TeamControllerTest extends ControllerTest {
             final Long teamId = 200_000L;
 
             final String message = "팀이 존재하지 않습니다.";
-            willThrow(new TeamNotFoundException("팀이 존재하지 않습니다. [teamId : " + teamId + "]", message))
+            willThrow(new TeamNotFoundException(DebugMessage.init()))
                     .given(teamService)
                     .close(teamId, 1L);
 
@@ -858,8 +940,8 @@ class TeamControllerTest extends ControllerTest {
             // given
             final Long teamId = 1L;
 
-            final String message = "이미 종료된 인터뷰입니다.";
-            willThrow(new InterviewTimeException(message))
+            final String message = "이미 인터뷰가 종료된 팀입니다.";
+            willThrow(new TeamAlreadyClosedException(DebugMessage.init()))
                     .given(teamService)
                     .close(teamId, 1L);
 
@@ -877,13 +959,13 @@ class TeamControllerTest extends ControllerTest {
         }
 
         @Test
-        @DisplayName("인터뷰 시작 시간 전에 종료하려고 하면 예외가 발생한다.")
-        void close_beforeStart_exception() throws Exception {
+        @DisplayName("팀이 진행 중이 아닐 때 종료하려고 하면 예외가 발생한다.")
+        void close_notInProgress_exception() throws Exception {
             // given
             final Long teamId = 1L;
 
-            final String message = "인터뷰가 시작되기 전에 종료할 수 없습니다.";
-            willThrow(new InterviewTimeException(message))
+            final String message = "인터뷰 진행중인 상태가 아닙니다.";
+            willThrow(new TeamNotInProgressException(DebugMessage.init()))
                     .given(teamService)
                     .close(teamId, 1L);
 
@@ -907,7 +989,7 @@ class TeamControllerTest extends ControllerTest {
             final Long teamId = 1L;
 
             final String message = "호스트 권한이 없습니다.";
-            willThrow(new HostUnauthorizedException(message))
+            willThrow(new HostUnauthorizedException(DebugMessage.init()))
                     .given(teamService)
                     .close(teamId, 1L);
 
@@ -940,7 +1022,7 @@ class TeamControllerTest extends ControllerTest {
         void deleteById_teamNotFound_exception() throws Exception {
             // given
             final String message = "팀이 존재하지 않습니다.";
-            willThrow(new TeamNotFoundException("팀이 존재하지 않습니다. 입력한 팀 id : [10000000]", message))
+            willThrow(new TeamNotFoundException(DebugMessage.init()))
                     .given(teamService)
                     .deleteById(10000000L, 1L);
 
@@ -958,12 +1040,12 @@ class TeamControllerTest extends ControllerTest {
         }
 
         @Test
-        @DisplayName("인터뷰 시작 시간 후에 삭제하려고 하면 예외가 발생한다.")
-        void deleteById_afterStart_exception() throws Exception {
+        @DisplayName("Ready 상태가 아닐 때 삭제하려고 하면 예외가 발생한다.")
+        void deleteById_notReady_exception() throws Exception {
             // given
             final Long teamId = 1L;
-            final String message = "인터뷰가 시작된 이후에는 삭제할 수 없습니다.";
-            willThrow(new InterviewTimeException(message))
+            final String message = "인터뷰 준비 상태가 아닙니다.";
+            willThrow(new TeamNotReadyException(DebugMessage.init()))
                     .given(teamService)
                     .deleteById(teamId, 1L);
 
@@ -987,7 +1069,7 @@ class TeamControllerTest extends ControllerTest {
             final Long teamId = 1L;
 
             final String message = "호스트 권한이 없습니다.";
-            willThrow(new HostUnauthorizedException(message))
+            willThrow(new HostUnauthorizedException(DebugMessage.init()))
                     .given(teamService)
                     .deleteById(teamId, 1L);
 
